fix: DeleteFilter button Icon appears too small

--- a/src/features/EmailMarketing/shared/TargetingBuilder/components/TargetingFilterGroup/components/TargetingFilter/components/DeleteFilterButton/DeleteFilterButton.scss
+++ b/src/features/EmailMarketing/shared/TargetingBuilder/components/TargetingFilterGroup/components/TargetingFilter/components/DeleteFilterButton/DeleteFilterButton.scss
@@ -3,5 +3,5 @@
 [aria-label='Delete filter button'] {
   width: $dimension-9;
   height: $dimension-9;
-  padding: $spacer-4;
+  min-width: $dimension-9;
 }
